<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_note_reference_menu_option"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add_note_reference_menu_option"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_sample_note_references_menu_option"
        android:title="@string/add_sample_note_references_menu_option"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_note_references_menu_option"
        android:title="@string/clear_note_references_menu_option"
        app:showAsAction="never" />
    <item
        android:id="@+id/grid_view_menu_option"
        android:title="@string/grid_view_menu_option"
        app:showAsAction="never" />
    <item
        android:id="@+id/list_view_menu_option"
        android:title="@string/list_view_menu_option"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter_sort_panel_menu_option"
        android:title="@string/filter_sort_panel_menu_option"
        app:showAsAction="never" />

</menu>